--- a/Romanian/main/MiuiSystemUI.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/MiuiSystemUI.apk/res/values-ro/plurals.xml
@@ -8,4 +8,8 @@
         <item quantity="other">Ascundeţi notificările a %d aplicaţii?</item>
         <item quantity="one">Ascundeţi notificările acestei aplicaţii?</item>
     </plurals>
+    <plurals name="view_realtime_clear">
+        <item quantity="other">Senin</item>
+        <item quantity="one">Însorit</item>
+    </plurals>
 </resources>
