--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
@@ -18,7 +18,7 @@
         <item>> 6 000(EȘTI BAZAT!)</item>
     </string-array>
     <string-array name="question_no1">
-        <item>"Familie"</item>
+        <item>Familie</item>
         <item>"Numele bunicii de pe mamă"</item>
         <item>"Numele bunicului de pe mamă"</item>
         <item>"Numele bunicii de pe tată"</item>
