--- a/Romanian/main/Calculator.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/arrays.xml
@@ -38,4 +38,8 @@
         <item>pi</item>
         <item>egal cu</item>
      </string-array>
+    <string-array name="mortgage_repayment">
+        <item>Rate egale</item>
+        <item>Rate descrescătoare</item>
+    </string-array>
 </resources>
