--- a/Romanian/main/Browser.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/arrays.xml
@@ -247,4 +247,16 @@
         <item>Telefon</item>
         <item>Tabletă</item>
     </string-array>
+    <string-array name="shortcut_dialog_title">
+        <item>Mesaj de la Browser</item>
+        <item>Urmăriți Olimpiada cu Mi</item>
+    </string-array>
+    <string-array name="shortcut_dialog_keep">
+        <item>OK</item>
+        <item>Urmăriți</item>
+    </string-array>
+    <string-array name="shortcut_dialog_delete">
+        <item>Delete</item>
+        <item>No thanks</item>
+    </string-array>
 </resources>
