--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="switch_apps_entries">
-        <item>Utilizată în spațiul implicit</item>
+        <item>Utilizată în spațiul principal</item>
         <item>Utilizată în spațiul secundar</item>
         <item>Utilizată în ambele spații</item>
     </string-array>
@@ -11,8 +11,8 @@
         <item>Atenție</item>
     </string-array>
     <string-array name="switch_apps_msg_confirms">
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul implicit.</item>
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul secundar.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
         <item>Aplicațiile sunt utilizate în ambele spații.</item>
     </string-array>
 </resources>
