--- a/Romanian/main/Notes.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/arrays.xml
@@ -13,7 +13,7 @@
         <item>Pseudonim</item>
         <item>Telefon</item>
         <item>E-mail</item>
-        <item>Organizaţie</item>
+        <item>Companie</item>
         <item>IM</item>
         <item>Telefon SIP</item>
         <item>Zi de naştere</item>
@@ -32,11 +32,11 @@
 "</item>
         <item>"Apăsați pentru a crea o notiță
 "</item>
-        <item>"Alegeți teme minunate
+        <item>"Alegeți teme
 "</item>
-        <item>"Creați un dosar pentru notițe
+        <item>"Creați dosare
 "</item>
-        <item>"Protejați notițele private
+        <item>"Ascundeți notițele
 "</item>
         <item>"Și multe alte caracteristici!
   - Sincronizare cu Mi Cloud
