--- a/Romanian/main/Weather.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/plurals.xml
@@ -14,6 +14,6 @@
     </plurals>
     <plurals name="view_realtime_clear">
         <item quantity="other">Senin</item>
-        <item quantity="one">Însorit</item>
+        <item quantity="one">Senin</item>
     </plurals>
 </resources>
