--- a/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
@@ -162,7 +162,7 @@
         <item quantity="one">%s aplicație este protejată</item>
     </plurals>
     <plurals name="sp_monitored_apps_list_group_disable">
-        <item quantity="other">%s aplicații nu sunt protejate</item>
-        <item quantity="one">%s aplicație nu este protejată</item>
+        <item quantity="other">"%s aplicații nu sunt protejate"</item>
+        <item quantity="one">"%s aplicație nu este protejată"</item>
     </plurals>
 </resources>
