--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
@@ -12,7 +12,7 @@
     </string-array>
     <string-array name="switch_apps_msg_confirms">
         <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul secundar.</item>
         <item>Aplicațiile sunt utilizate în ambele spații.</item>
     </string-array>
 </resources>
