--- a/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
@@ -60,6 +60,14 @@
         <item quantity="other">%d elemente pot fi optimizate</item>
         <item quantity="one">%d element poate fi optimizat</item>
     </plurals>
+    <plurals name="system_check_content">
+        <item quantity="other">%1$d elemente sigure</item>
+        <item quantity="one">%1$d element sigur</item>
+    </plurals>
+    <plurals name="cache_check_content">
+        <item quantity="other">Sunt protejate %d aplicații</item>
+        <item quantity="one">Este protejată %d aplicație</item>
+    </plurals>
     <plurals name="hints_auto_start_enable_title">
         <item quantity="other">%d aplicații pot să pornească automat</item>
         <item quantity="one">%d aplicație poate să pornească automat</item>
@@ -148,5 +156,17 @@
     <plurals name="sp_monitored_apps_list_group_disable">
         <item quantity="other">"%s aplicații nu sunt protejate"</item>
         <item quantity="one">"%s aplicație nu este protejată"</item>
+    </plurals>
+    <plurals name="section_clear_acc_item_right_tips">
+        <item quantity="other">%d aplicații blocate așteaptă să fie curățate</item>
+        <item quantity="one">%d aplicație blocată așteaptă să fie curățată</item>
+    </plurals>
+    <plurals name="section_security_defend_item_right_tips">
+        <item quantity="other">Au fost eliminați %d viruși</item>
+        <item quantity="one">A fost eliminat %d virus</item>
+    </plurals>
+    <plurals name="optimize_result_button_add_score">
+        <item quantity="other">+%d puncte</item>
+        <item quantity="one">+%d punct</item>
     </plurals>
 </resources>
