--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="account_user_gender_name">
+        <item>Masculin</item>
+        <item>Feminin</item>
+    </string-array>
     <string-array name="education">
         <item>Gimnaziu</item>
         <item>Școală pregătitoare</item>
